# PersonalResearchSupport

./: README.md
docs/: 0010_全体構想.md  0020_構想インテリジェント文献ナビゲーター.md  Milvus MCP使用ガイド.md  PostgreSQLをMCP Server経由でRAGに活用する方法.md
src/backend/postgre/: .env.example  README.md  app.py  docker-compose.yaml  literature_navigator.py  pyproject.toml  server.py
src/backend/postgre/templates/: index.html
src/backend/postgre/webui/: app.py  literature_navigator_ui.py
