[project]
name = "postgre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "openai>=1.72.0",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.0",
]
